--- a/src/html/test-browserify.html
+++ b/src/html/test-browserify.html
@@ -5,7 +5,8 @@
 	<title>Typescript Sample</title>
 </head>
 <body>
-	 
+	<p id="user01">Loading...</p> 
+	<p id="user02">Loading...</p> 
 </body>
 <script src="./scripts/ts/test-browserify-bundle.js"></script>
 </html>
