update build ts and watch

--- a/src/html/test-browserify.html
+++ b/src/html/test-browserify.html
@@ -5,8 +5,10 @@
 	<title>Typescript Sample</title>
 </head>
 <body>
+	<h1>Test loading typescript v8</h1>
 	<p id="user01">Loading...</p> 
 	<p id="user02">Loading...</p> 
 </body>
-<script src="./scripts/ts/test-browserify-bundle.js"></script>
+<script src="./scripts/ts/test-browserify-01-bundle.js"></script>
+<script src="./scripts/ts/test-browserify-02-bundle.js"></script>
 </html>
