--- a/src/html/test.html
+++ b/src/html/test.html
@@ -5,7 +5,9 @@
 	<title>Typescript Sample</title>
 </head>
 <body>
-	 
+	<h1>Test loading typescript v2</h1>
+	<p id="user01">Loading...</p> 
+	<p id="user02">Loading...</p> 
 </body>
 <script src="./scripts/ts/module01/greeter-page.js"></script>
 <script src="./scripts/ts/test-page.js"></script>
